# ssh-fzf

./: .gitignore  README.md  pyproject.toml  run.sh  serv.sh  server.py
cert/: create_certs.sh
config/: config.toml  server_config.toml
docker/: Dockerfile  docker-compose.yml
src/ssh_fzf/: __init__.py  fzf.py  load_config.py  main.py
