[project]
name = "ssh-fzf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masayoshi Kokuryo", email = "masakoku@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "toml>=0.10.2",
    "mini>=0.2.1",
    "requests>=2.34.2",
]
[tool.uv.sources]
mini = { git = "https://github.com/pluripotency/mini" }

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
